<?xml version="1.0" encoding="utf-8"?>
<!--  
Copyright (c) 2012, Apps4Av Inc. (apps4av.com) 
All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:

    * Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
    *     * Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
    *
    *     THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    

    <LinearLayout 
        android:baselineAligned="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout 
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView 
                android:id="@+id/checklist_button_load"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/border_transparent"
                android:text="@string/SavedLists"
                />
            <ListView
                android:id="@+id/checklist_list_save"
                android:cacheColorHint="#00000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray"/>
                
	<RelativeLayout
	       android:layout_width="match_parent"
	       android:layout_weight="1"
	       android:layout_height="match_parent">
            
	    <LinearLayout 
           android:layout_width="match_parent"
           android:id="@+id/checklist_layout_actions_buttons"
           android:layout_height="wrap_content">	        
	        
	        <Button 
            android:id="@+id/checklist_button_insert"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Add"/>

	        <Button 
            android:id="@+id/checklist_button_import"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Import"/>
	           
	    </LinearLayout>
	             <!-- This control has a xmlns ending in res-auto so gradle can
	            automatically insert the appropriate package name based on the
	            build type. -->
	   	    <com.ds.avare.touch.TouchListView
	      android:id="@+id/checklist_list"
	      xmlns:tlv="http://schemas.android.com/apk/res-auto"
	      tlv:grabber="@+id/check_list_icon"
	               tlv:remove_mode="slideRight"
	      android:layout_above="@+id/checklist_text_save"
	      android:layout_width="wrap_content"
	      android:layout_below="@+id/checklist_layout_actions_buttons"
	      android:cacheColorHint="#00000000"			            
	      android:layout_height="match_parent"/>
	   	
	   	    <EditText
	               android:id="@+id/checklist_text_save"
	               android:layout_width="match_parent"
	               android:layout_above="@+id/checklist_button_save"
	               android:layout_height="wrap_content"
	               android:textSize="20sp"
	               android:hint=""/>
	   	    
            <Button 
                android:id="@+id/checklist_button_save"
                android:layout_width="wrap_content"
                   android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Save"/>
            
            <ToggleButton 
                android:id="@+id/checklist_button_lock"
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/checklist_button_save"
                android:layout_height="wrap_content"
                android:textOff="@string/Lock"
                android:textOn="@string/Edit"/>
            	
	           <ProgressBar
			      android:id="@+id/checklist_progress_bar"
			      style="?android:attr/progressBarStyleSmall"
			      android:layout_width="wrap_content"
			      android:layout_height="wrap_content"
			      android:layout_centerInParent="true"
			      android:visibility="invisible"
			      android:layout_marginRight="14dp"
			      android:layout_marginTop="14dp" />
	           	                
	    </RelativeLayout>               
        	    
    </LinearLayout>
    
    <Button
        android:id="@+id/checklist_button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checklist_button_delete"
        android:visibility="invisible" />
    
    <Button
        android:id="@+id/checklist_button_delete"
        android:textStyle="bold"
        android:minWidth="140dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checklist_button_2"
        android:gravity="left|center"
        android:text="@string/Delete"
        android:drawableLeft="@drawable/remove"
        android:visibility="invisible" />
    
	<Button
	    android:id="@+id/checklist_button_2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/checklist_button_1"
	    android:visibility="invisible" />

	<Button
        android:id="@+id/checklist_button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="invisible" />
		
</RelativeLayout>
